--- a/package.json
+++ b/package.json
@@ -12,16 +12,27 @@
   "type": "module",
   "license": "ISC",
   "dependencies": {
+    "@stripe/stripe-js": "^8.1.0",
     "@upstash/redis": "^1.35.5",
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.24",
     "ioredis": "^5.8.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.545.0",
     "mongoose": "^8.19.1",
-    "stripe": "^19.1.0"
+    "react": "^18.3.1",
+    "react-confetti": "^6.4.0",
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
+    "react-router-dom": "^7.9.4",
+    "recharts": "^3.2.1",
+    "stripe": "^19.1.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
